--- a/ПЗ.md
+++ b/ПЗ.md
@@ -59,7 +59,7 @@ dy = player.y - enemy.y
 distance = math.sqrt(dx**2 + dy**2)
 if distance > 0:
     enemy.x += (dx / distance) * speed
-    enemy.y += (dy / distance) * speed
+    enemy.y += (dy / distance) * speed```
 База данных:
 
 sql
