--- a/ПЗ.md
+++ b/ПЗ.md
@@ -59,7 +59,7 @@ distance = math.sqrt(dx**2 + dy**2)
 if distance > 0:
     enemy.x += (dx / distance) * speed
     enemy.y += (dy / distance) * speed```
-База данных:
+**База данных:**
 
 sql
 CREATE TABLE results (
@@ -69,7 +69,7 @@ CREATE TABLE results (
     level INTEGER,
     date TEXT
 );
-Оптимизация:
+**Оптимизация:**
 
 Пакетная отрисовка через SpriteList.
 
@@ -77,17 +77,8 @@ CREATE TABLE results (
 
 Безопасное удаление объектов из памяти.
 
-6. Решенные проблемы
-Двойное удаление пуль — реализовано через список для отложенного удаления.
-
-Устаревший API Arcade — обновлены названия методов под версию 3.3.3.
-
-Утечки памяти — добавлена принудительная очистка списков при смене уровня.
-
-Падение FPS — оптимизированы алгоритмы проверки столкновений.
-
-7. Результаты
-Реализовано:
+## 7. Результаты
+**Реализовано:**
 
 Полный игровой цикл
 
@@ -103,17 +94,7 @@ CREATE TABLE results (
 
 Стабильная работа (60 FPS)
 
-Статистика:
-
-Разрешение: 1024×768
-
-Память: < 200 МБ
-
-Объем кода: ~1500 строк
-
-Текущий прогресс: 80%
-
-8. Планы развития
+## 8. Планы развития
 Ближайшие задачи:
 
 Добавить качественные графические спрайты.
