--- a/ПЗ.md
+++ b/ПЗ.md
@@ -1,114 +1,231 @@
-# Пояснительная записка к проекту "Danger Monsters"
+# Пояснительная записка  
+## к проекту «Danger Monsters»
+
+---
 
 ## 1. Введение
-**Тема:** Разработка 2D top-down шутера на Python с использованием библиотеки Arcade.
 
-**Цель:** Создание полноценной игры с героем, врагами, системой уровней и сохранением результатов.
+Проект **«Danger Monsters»** представляет собой 2D-игру в жанре аркадного экшена, разработанную на языке программирования Python с использованием графической библиотеки **Arcade**.
 
-**Задачи:**
-- Реализовать управляемого персонажа с движением, стрельбой и здоровьем.
-- Создать врагов с ИИ преследования.
-- Разработать 5 уровней с возрастающей сложностью.
-- Добавить финального босса с тремя фазами боя.
-- Интегрировать базу данных для сохранения рекордов.
-- Оптимизировать производительность.
+Цель проекта — создание простого, но функционального игрового приложения, демонстрирующего навыки:
+- объектно-ориентированного программирования;
+- работы с графическим интерфейсом;
+- организации игрового цикла;
+- хранения данных с использованием базы данных SQLite.
 
-## 2. Технологии
-- Python 3.9+ — основной язык разработки.
-- Arcade 3.3.3 — графическая библиотека для 2D-игр.
-- SQLite3 — встроенная БД для хранения результатов.
-- ООП и модульная архитектура — для структурирования кода.
+Проект выполнен в рамках учебной программы **Яндекс Лицея**.
 
-## 3. Структура проекта
-main.py # Точка входа
-game.py # Основной игровой цикл
-player.py # Класс игрока
-enemy.py # Обычные враги
-boss.py # Финальный босс
-levels.py # Система уровней
-menu.py # Главное меню
-database.py # Работа с БД
-final_screen.py # Экран победы/поражения
+---
 
-text
+## 2. Назначение проекта
 
-## 4. Игровой процесс
-**Управление:**
-- WASD — движение
-- ЛКМ — стрельба
-- ESC — выход в меню
+Приложение предназначено для:
+- демонстрации принципов разработки игр на Python;
+- закрепления знаний по архитектуре программ;
+- изучения работы с событиями клавиатуры и мыши;
+- работы с базой данных для сохранения результатов.
 
-**Система здоровья:**
-- Игрок: 100 HP (-20 за столкновение)
-- Враги: 60-120 HP (-25 от пули)
-- Босс: 1000 HP (3 фазы)
+Игра может использоваться как учебный пример или как простая аркадная игра для пользователей.
 
-**Уровни сложности:**
-- Уровень 1: 5 врагов, 60 HP
-- Уровень 2: 8 врагов, 80 HP
-- Уровень 3: 12 врагов, 100 HP
-- Уровень 4: 15 врагов, 120 HP
-- Уровень 5: финальный босс (1000 HP)
+---
 
-## 5. Технические решения
-**ИИ врагов:**
-# Простой алгоритм преследования
-dx = player.x - enemy.x
-dy = player.y - enemy.y
-distance = math.sqrt(dx**2 + dy**2)
-if distance > 0:
-    enemy.x += (dx / distance) * speed
-    enemy.y += (dy / distance) * speed```
-**База данных:**
+## 3. Используемые технологии
 
-sql
-CREATE TABLE results (
-    id INTEGER PRIMARY KEY,
-    name TEXT,
-    score INTEGER,
-    level INTEGER,
-    date TEXT
-);
-**Оптимизация:**
+В проекте использованы следующие технологии и инструменты:
 
-Пакетная отрисовка через SpriteList.
+- **Python 3** — основной язык программирования.
+- **Arcade** — библиотека для создания 2D-игр.
+- **SQLite** — встроенная база данных для хранения результатов.
+- **Object-Oriented Programming (OOP)** — организация логики игры.
+- **Virtual Environment (venv)** — изоляция зависимостей проекта.
 
-Ограничение FPS до 60.
+---
 
-Безопасное удаление объектов из памяти.
+## 4. Структура проекта
 
-## 7. Результаты
-**Реализовано:**
+Проект имеет следующую структуру файлов:
 
-Полный игровой цикл
+Danger_Monsters/
+src/
+│
+├── main.py
+├── menu.py
+├── game.py
+├── player.py
+├── enemy.py
+├── boss.py
+├── levels.py
+├── score.py
+├── database.py
+├── data/
+└── README.md
 
-5 уровней с прогрессией
 
-ИИ преследования врагов
+---
 
-Босс с тремя фазами
+## 5. Описание файлов проекта
 
-Сохранение результатов в БД
+### 5.1 `main.py`
 
-Главное меню и финальные экраны
+Файл запуска приложения.
 
-Стабильная работа (60 FPS)
+Функции:
+- создание игрового окна;
+- установка размеров экрана;
+- запуск главного цикла Arcade;
+- отображение стартового меню.
 
-## 8. Планы развития
-Ближайшие задачи:
+---
 
-Добавить качественные графические спрайты.
+### 5.2 `menu.py`
 
-Реализовать звуковые эффекты и фоновую музыку.
+Отвечает за пользовательский интерфейс меню.
 
-Создать разные типы рядовых врагов (стрелки, быстрые враги).
+Реализует:
+- стартовое меню игры;
+- обработку нажатия клавиш и мыши;
+- переход к игровому экрану;
+- выход из приложения;
+- отображение таблицы рекордов.
 
-Добавить систему улучшений (power-ups).
+---
 
-Перспективные цели:
+### 5.3 `game.py`
 
-Встроенный редактор уровней.
+Основной файл игровой логики.
 
-Многопользовательский режим (Co-op).
+Содержит:
+- игровой цикл (`on_update`, `on_draw`);
+- управление персонажем;
+- логику врагов и босса;
+- обработку столкновений;
+- подсчёт очков;
+- завершение игры и переход на финальный экран.
 
-Портирование на мобильные платформы. 
+---
+
+### 5.4 `player.py`
+
+Реализует игровой персонаж.
+
+Функциональность:
+- хранение позиции персонажа;
+- управление движением;
+- хранение и обработка здоровья;
+- получение урона.
+
+---
+
+### 5.5 `enemy.py`
+
+Содержит логику обычных врагов.
+
+Реализует:
+- движение врагов в сторону игрока;
+- параметры здоровья и скорости;
+- обработку уничтожения врагов.
+
+---
+
+### 5.6 `boss.py`
+
+Файл логики финального босса.
+
+Содержит:
+- несколько фаз поведения;
+- уникальные атаки;
+- систему снарядов;
+- изменение сложности в зависимости от здоровья.
+
+---
+
+### 5.7 `levels.py`
+
+Отвечает за систему уровней.
+
+Реализует:
+- хранение конфигураций уровней;
+- подсчёт уничтоженных врагов;
+- переход между уровнями;
+- определение финального уровня с боссом.
+
+---
+
+### 5.8 `score.py`
+
+Отвечает за подсчёт очков.
+
+Функции:
+- начисление очков за врагов;
+- бонусные очки за босса;
+- подсчёт итогового результата.
+
+---
+
+### 5.9 `database.py`
+
+Реализует работу с базой данных SQLite.
+
+Функциональность:
+- создание базы данных при первом запуске;
+- сохранение результатов игры;
+- хранение имени игрока, очков и даты;
+- получение таблицы рекордов.
+
+---
+
+## 6. Работа с базой данных
+
+Для хранения результатов используется база данных **SQLite**.
+
+### Таблица `game_results` содержит поля:
+- `id` — уникальный идентификатор записи;
+- `player_name` — имя игрока;
+- `score` — количество очков;
+- `date` — дата прохождения.
+
+База данных автоматически создаётся в папке `data` при первом запуске игры.
+
+---
+
+## 7. Управление в игре
+
+- **W** — движение вверх  
+- **A** — движение влево  
+- **S** — движение вниз  
+- **D** — движение вправо  
+- **ЛКМ / Пробел** — атака  
+- **ESC** — выход в меню  
+
+---
+
+## 8. Инструкция по запуску
+
+1. Установить Python версии **3.10 и выше**.
+2. Создать виртуальное окружение:
+python -m venv .venv
+
+3. Активировать виртуальное окружение:
+- Windows:
+  ```
+  .venv\Scripts\activate
+  ```
+4. Установить зависимости:
+pip install arcade
+
+5. Запустить проект:
+python main.py
+
+
+---
+
+## 9. Заключение
+
+В ходе выполнения проекта была разработана полноценная 2D-игра с:
+- меню;
+- игровыми уровнями;
+- врагами и финальным боссом;
+- системой подсчёта очков;
+- сохранением результатов в базе данных.
+
+Проект демонстрирует практическое применение Python и библиотеки Arcade, а также основы архитектуры игровых приложений. 
