--- a/ПЗ.md
+++ b/ПЗ.md
@@ -1,5 +1,5 @@
 # Пояснительная записка  
-## к проекту «Danger Monsters»
+## к проекту «Space War»
 
 ---
 
@@ -55,9 +55,8 @@ src/
 ├── enemy.py
 ├── boss.py
 ├── levels.py
-├── score.py
 ├── database.py
-├── data/
+├── data/game_scores.db
 └── README.md
 
 
@@ -151,17 +150,6 @@ src/
 
 ---
 
-### 5.8 `score.py`
-
-Отвечает за подсчёт очков.
-
-Функции:
-- начисление очков за врагов;
-- бонусные очки за босса;
-- подсчёт итогового результата.
-
----
-
 ### 5.9 `database.py`
 
 Реализует работу с базой данных SQLite.
@@ -178,7 +166,7 @@ src/
 
 Для хранения результатов используется база данных **SQLite**.
 
-### Таблица `game_results` содержит поля:
+### Таблица `scores` содержит поля:
 - `id` — уникальный идентификатор записи;
 - `player_name` — имя игрока;
 - `score` — количество очков;
